test/conformance/reject/ref_in_heading.hdoc
hdoc(version="2.0", lang="en");

p(id="target") "Target"

h1 { Heading \ref(ref="target") "see"; }
